[gd_scene load_steps=13 format=3 uid="uid://dfsy8g721npjy"]

[ext_resource type="Texture2D" uid="uid://dfpegnp4im0x8" path="res://sprites/enemies/roached_enemy/8 - Roach_Hurt (32 x 32).png" id="1_br0aw"]
[ext_resource type="Script" path="res://scripts/bug_enemy.gd" id="1_ka8wm"]
[ext_resource type="Texture2D" uid="uid://d3cfux8aqair8" path="res://sprites/enemies/roached_enemy/8 - Roach_Idle (32 x 32).png" id="2_w55fc"]
[ext_resource type="Texture2D" uid="uid://cvsydxi1ptxwg" path="res://sprites/enemies/roached_enemy/8 - Roach_Running (32 x 32).png" id="3_2s3c0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88m8g"]
atlas = ExtResource("1_br0aw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuqgf"]
atlas = ExtResource("2_w55fc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3i6w"]
atlas = ExtResource("2_w55fc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhbrx"]
atlas = ExtResource("3_2s3c0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw6h0"]
atlas = ExtResource("3_2s3c0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vajeu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88m8g")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuqgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3i6w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhbrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw6h0")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o1nem"]
radius = 5.52268

[sub_resource type="RectangleShape2D" id="RectangleShape2D_givfu"]
size = Vector2(10, 2)

[node name="BugEnemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = 7
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 323
script = ExtResource("1_ka8wm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vajeu")
animation = &"run"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 8)
shape = SubResource("CircleShape2D_o1nem")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="DeathArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 258

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_givfu")

[node name="SecondTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DeathArea" to="." method="_on_death_area_body_entered"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_second_timer_timeout"]
